<resources>
    <string name="app_name">EnergyRiver</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="load_error">加载出现问题</string>
    <string name="reload">重新加载</string>
    <string name="loading">加载中...</string>
    <string name="ensure">确认</string>
    <string name="cancel">取消</string>
    <string name="is_VIP_user">VIP子用户登陆</string>
    <string name="empty_data">暂无数据</string>
    <!--底部tab-->
    <string name="inquiry">能耗概况</string>
    <string name="control">智能控制</string>
    <string name="user_center">个人中心</string>
    <!--个人中心-->
    <string name="sub_manage">管理子用户</string>
        <string name="edit_sub">编辑子用户</string>
        <string name="no_sub_user">暂无子用户</string>
        <string name="add_sub">新增子用户</string>
        <string name="sub_username">子用户名</string>
        <string name="input_sub_username">请输入子用户名</string>
        <string name="work_num">工&#160;&#160;位&#160;&#160;号</string>
        <string name="input_work_num">请输入工位号</string>
        <string name="init_password">初始密码</string>
        <string name="input_init_password">请输入初始密码</string>
        <string name="department">部&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;门</string>
        <string name="input_department">请输入部门</string>
        <string name="job">职&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;位</string>
        <string name="input_job">请输入职位</string>
        <string name="mobile">手&#160;&#160;机&#160;&#160;号</string>
        <string name="input_mobile">请输入手机号</string>
        <string name="identity">身份证号</string>
        <string name="input_identity">请输入身份证号</string>
        <string name="empty_input">请将信息填写完整</string>
        <string name="illegal_mobile">手机格式不正确</string>
        <string name="illegal_id">身份证号码格式不正确</string>
        <string name="choose_building">请选择建筑</string>
        <string name="delete_user">删除用户</string>
    <string name="bill">能耗账单</string>
    <string name="bill_detail">账单详情</string>
    <string name="no_bill">未查询到账单</string>
    <string name="no_bill_addition">可能原因:\n1.暂无账单\n2.顶级机构不存在账单</string>
    <string name="notification">事件通知</string>
    <string name="notice_detail">事件详情</string>
        <string name="time">时&#160;&#160;间</string>
        <string name="title">标&#160;&#160;题</string>
        <string name="content">内&#160;&#160;容</string>
    <string name="buy_vip">VIP购买</string>
    <string name="invoice_manage">发票管理</string>
    <string name="change_pwd">修改密码</string>
        <string name="input_ori">请输入原密码：</string>
        <string name="input_new">请输入新密码：</string>
        <string name="input_new_twice">请确认新密码：</string>
    <string name="log_out">退出登录</string>
        <string name="log_out_success">已成功退出登陆</string>
    <string name="about_us">关于我们</string>
        <string name="about_us_content">本期项目开发核心内容主要包括三个部分：一是建设运营商与租户的账单结算模块、二是开发租户使用的专用APP，三是建设智能门牌管理子系统。核心思路是将现有系统的web前端模块升级为二级运营商管理平台，web后台模块升级为顶级运营商（盐巴科技）使用的管理平台，在二级运营商管理平台拓展租户管理功能和开发租户专用的app子系统和建设智能门牌管理系统。</string>
    <string name="self_info">个人信息</string>
        <string name="avatar">头像</string>
        <string name="name">名称</string>
        <string name="user_mobile">绑定手机号</string>
        <string name="get_verify">获取验证码</string>
        <string name="input_verify">请输入验证码</string>
        <string name="get_verify_success">获取短信验证码成功</string>
        <string name="get_verify_fail">获取短信验证码失败,请检查网络后重试</string>
        <string name="empty_verify">请输入短信验证码</string>
        <string name="wrong_verify">输入验证码有误</string>
        <string name="ori_pwd">原密码</string>
        <string name="new_pwd">新密码</string>
        <string name="ensure_new_pwd">确认新密码</string>
        <string name="input_username">请输入用户名</string>
        <string name="change_name">修改用户名</string>
    <string name="submit">提交</string>
    <string name="shoot">拍照</string>
    <string name="photograph">从相册中选择</string>
    <!--能耗查询-->
    <string name="consume_rank_monthly">本月能耗排名</string>
    <array name="tab_name">
        <item>区域</item>
        <item>机构</item>
        <item>设备</item>
        <item>分相</item>
    </array>
    <string name="user">用户</string>
    <string name="money">金额</string>
    <string name="percent">比例</string>
    <string name="no_type">暂无分相数据</string>
    <string name="no_type_addition">(不存在基础回路)</string>
    <!--智能控制-->
    <string name="scene_mode">场景模式</string>
    <string name="group_control_mode">组控模式</string>
    <string name="scene_control">场景控制</string>
    <string name="group_control">群组控制</string>
    <string name="save">保存</string>
    <string name="add_scene">新增场景</string>
        <string name="scene_name_input">请输入场景名称</string>
    <string name="add_group">新增组控</string>
        <string name="group_name_input">请输入组控名称</string>
    <string name="choose_room">选择房间</string>
    <string name="scene_name">场景名称</string>
    <string name="edit_device">请设定设备在该模式下的状态</string>
    <string name="input_scene">请输入场景名称</string>
    <string name="edit_time">定时设置</string>
        <string name="timing_section">运行区间</string>
    <string name="time_param">定时参数设置</string>
        <string name="start_time">开始时间</string>
        <string name="choose_start_time">请选择开始时间</string>
        <string name="choose_end_time">请选择结束时间</string>
        <string name="end_time">结束时间</string>
        <string name="exec_after_completion">结束后执行</string>
            <string name="close">关闭</string>
        <string name="period">周期</string>
    <string name="choose_period">请选择周期</string>
    <string name="light">照明</string>
    <string name="air_condition">空调</string>
    <string name="socket">插座</string>
    <string name="no_loop_item">暂无可控制的回路</string>
    <string name="no_control_loop">该房间下暂无可控制的回路</string>
    <string name="room_temp">室内\n温度</string>
    <string name="set_temp">设定\n温度</string>
    <string name="low_speed">低速</string>
    <string name="medium_speed">中速</string>
    <string name="high_speed">高速</string>
    <string name="cold_mode">冷风</string>
    <string name="hot_mode">暖风</string>
    <string name="dehumidify">除湿</string>
    <string name="temp_unit"> ℃</string>
    <string name="buy_VIP">请点击确认购买VIP用户功能</string>
    <string name="auth_cancel">取&#160;&#160;消</string>
    <string name="auth_ensure">确&#160;&#160;认</string>
    <string name="add">新增</string>
    <string name="delete">删除</string>
</resources>
