<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseColor">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/navbg"
        android:id="@+id/toolbar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/edit_sub"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="24dp"
            android:id="@+id/save"
            android:text="@string/save"
            android:clickable="true"
            android:textColor="@color/white"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back"
            android:id="@+id/back"/>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gradient_end"
        android:id="@+id/underline"
        android:layout_below="@+id/toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/underline"
        android:id="@+id/sub_username"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:background="@color/colorPrimary"
        app:layout_marginTopPercent="5%"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_username"
            android:textSize="14sp"
            android:textColor="@color/white"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/white"
            android:src="@mipmap/arrow"
            android:textSize="12sp"
            android:hint="@string/input_sub_username"
            android:textColorHint="@color/white"
            android:id="@+id/sub_username_value"
            android:background="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub_username"
        android:id="@+id/password"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:background="@color/colorPrimary"
        app:layout_marginTopPercent="1%"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginPercent="3%"
            android:text="@string/init_password"
            android:textSize="14sp"
            android:textColor="@color/white"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/white"
            android:src="@mipmap/arrow"
            android:textSize="12sp"
            android:hint="@string/input_init_password"
            android:textColorHint="@color/light_grey"
            android:id="@+id/password_value"
            android:inputType="textPassword"
            android:background="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:id="@+id/work_num"
        android:background="@color/colorPrimary"
        app:layout_marginTopPercent="1%"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginPercent="3%"
            android:text="@string/work_num"
            android:textColor="@color/white"
            android:textSize="14sp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/white"
            android:src="@mipmap/arrow"
            android:textSize="12sp"
            android:hint="@string/input_work_num"
            android:textColorHint="@color/light_grey"
            android:id="@+id/work_num_value"
            android:background="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/work_num"
        android:id="@+id/department"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:background="@color/colorPrimary"
        app:layout_marginTopPercent="1%"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginPercent="3%"
            android:text="@string/department"
            android:textSize="14sp"
            android:textColor="@color/white"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/white"
            android:src="@mipmap/arrow"
            android:textSize="12sp"
            android:hint="@string/input_department"
            android:textColorHint="@color/light_grey"
            android:id="@+id/department_value"
            android:background="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/department"
        android:id="@+id/job"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:background="@color/colorPrimary"
        app:layout_marginTopPercent="1%"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginPercent="3%"
            android:text="@string/job"
            android:textSize="14sp"
            android:textColor="@color/white"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/white"
            android:src="@mipmap/arrow"
            android:textSize="12sp"
            android:hint="@string/input_job"
            android:textColorHint="@color/light_grey"
            android:id="@+id/job_value"
            android:background="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/job"
        android:id="@+id/mobile"
        android:background="@color/colorPrimary"
        app:layout_marginTopPercent="1%"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginPercent="3%"
            android:text="@string/mobile"
            android:textSize="14sp"
            android:textColor="@color/white"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/white"
            android:src="@mipmap/arrow"
            android:textSize="12sp"
            android:hint="@string/input_mobile"
            android:textColorHint="@color/light_grey"
            android:id="@+id/mobile_value"
            android:background="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobile"
        android:id="@+id/identity"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:background="@color/colorPrimary"
        app:layout_marginTopPercent="1%"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginPercent="3%"
            android:text="@string/identity"
            android:textSize="14sp"
            android:textColor="@color/white"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/white"
            android:src="@mipmap/arrow"
            android:textSize="12sp"
            android:hint="@string/input_identity"
            android:textColorHint="@color/light_grey"
            android:id="@+id/identity_value"
            android:background="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/identity"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:background="@color/colorPrimary"
        app:layout_marginTopPercent="3%"
        android:id="@+id/choose_room"
        android:clickable="true"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:layout_marginPercent="3%"
            android:textSize="14sp"
            android:text="@string/choose_room"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginPercent="3%"
            android:textSize="14sp"
            android:id="@+id/room_value"
            android:textColor="@color/white"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_user"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:id="@+id/delete_user"
        android:background="@color/red"
        android:layout_alignParentBottom="true"/>
</android.support.percent.PercentRelativeLayout>