<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseColor">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/navbg"
        android:id="@+id/toolbar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/time_param"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="24dp"
            android:id="@+id/save"
            android:text="@string/save"
            android:clickable="true"
            android:textColor="@color/white"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back"
            android:id="@+id/back"/>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gradient_end"
        android:id="@+id/underline"
        android:layout_below="@+id/toolbar"/>
    <!--开始时间-->
    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/underline"
        android:id="@+id/start_time_name"
        android:background="@color/colorPrimary"
        app:layout_marginTopPercent="5%">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginPercent="3%"
            android:text="@string/start_time"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:layout_marginRightPercent="5%"
            app:layout_marginLeftPercent="5%"
            android:textColor="@color/white"
            android:src="@mipmap/arrow"
            android:textSize="14sp"
            android:text="@string/choose_start_time"
            android:id="@+id/start_time_value"
            android:background="@null"/>
    </android.support.percent.PercentRelativeLayout>
    <!--结束时间-->
    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_time_name"
        android:id="@+id/end_time_name"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginPercent="3%"
            android:text="@string/end_time"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:layout_marginRightPercent="5%"
            app:layout_marginLeftPercent="5%"
            android:textColor="@color/white"
            android:src="@mipmap/arrow"
            android:textSize="14sp"
            android:text="@string/choose_end_time"
            android:id="@+id/end_time_value"
            android:background="@null"/>
    </android.support.percent.PercentRelativeLayout>
    <!--结束后执行-->
    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/end_time_name"
        android:id="@+id/exec_name"
        android:background="@color/colorPrimary"
        app:layout_marginTopPercent="3%">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginPercent="3%"
            android:text="@string/exec_after_completion"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:layout_marginRightPercent="5%"
            app:layout_marginLeftPercent="5%"
            android:textColor="@color/white"
            android:src="@mipmap/arrow"
            android:textSize="14sp"
            android:text="@string/close"
            android:id="@+id/exec_value"
            android:background="@null"/>
    </android.support.percent.PercentRelativeLayout>

    <!--周期-->
    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/exec_name"
        android:id="@+id/period_name"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginPercent="3%"
            android:text="@string/period"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:layout_marginRightPercent="5%"
            app:layout_marginLeftPercent="5%"
            android:textColor="@color/white"
            android:src="@mipmap/arrow"
            android:textSize="14sp"
            android:text="@string/choose_period"
            android:id="@+id/period_value"
            android:background="@null"/>
    </android.support.percent.PercentRelativeLayout>

</android.support.percent.PercentRelativeLayout>