<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseColor">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/navbg"
        android:id="@+id/toolbar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/user_mobile"
            android:textColor="@color/white"
            android:textSize="16sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back"
            android:id="@+id/back"/>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gradient_end"
        android:id="@+id/underline"
        android:layout_below="@+id/toolbar"/>
    <EditText
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        app:layout_heightPercent="7%"
        android:layout_below="@id/underline"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:id="@+id/mobile"
        android:textSize="14sp"
        android:inputType="numberDecimal"
        app:layout_marginTopPercent="3%"
        android:paddingLeft="8dp"
        android:textColor="@color/white"
        android:hint="@string/input_mobile"/>
    <LinearLayout
        android:layout_width="match_parent"
        app:layout_heightPercent="7%"
        android:orientation="horizontal"
        android:layout_below="@id/mobile"
        android:id="@+id/verify_panel"
        android:layout_marginTop="4dp">
        <EditText
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:gravity="center_vertical"
            android:id="@+id/verify"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:inputType="number"
            android:hint="@string/input_verify"
            android:paddingLeft="8dp"/>
        <TextView
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:clickable="true"
            android:layout_marginLeft="4dp"
            android:text="@string/get_verify"
            android:id="@+id/get_verify"
            android:textColor="@color/white"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        app:layout_heightPercent="7%"
        android:layout_below="@id/verify_panel"
        app:layout_marginTopPercent="4%"
        android:id="@+id/submit"
        android:background="@color/submit_blue"
        android:text="@string/submit"
        android:textSize="14sp"
        android:clickable="true"
        android:textColor="@color/white"
        android:gravity="center"/>
</android.support.percent.PercentRelativeLayout>