<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseColor">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/navbg"
        android:id="@+id/toolbar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/change_name"
            android:textColor="@color/white"
            android:textSize="16sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back"
            android:id="@+id/back"/>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gradient_end"
        android:id="@+id/underline"
        android:layout_below="@+id/toolbar"/>
    <EditText
        android:background="@color/colorPrimary"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="7%"
        android:layout_below="@id/underline"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:id="@+id/username_input"
        android:textSize="14sp"
        app:layout_marginTopPercent="3%"
        app:layout_marginLeftPercent="5%"
        android:hint="@string/input_username"/>
    <TextView
        android:layout_width="match_parent"
        app:layout_heightPercent="7%"
        android:layout_below="@id/username_input"
        app:layout_marginTopPercent="4%"
        android:id="@+id/submit"
        android:background="@color/submit_blue"
        android:text="@string/submit"
        android:textSize="14sp"
        android:clickable="true"
        android:textColor="@color/white"
        android:gravity="center"/>
</android.support.percent.PercentRelativeLayout>